--- a/circle-module/src/main/AndroidManifest.xml
+++ b/circle-module/src/main/AndroidManifest.xml
@@ -1,2 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.circle_module" />
+    package="com.example.circle_module">
+
+    <application
+        android:allowBackup="true"
+        android:label="@string/app_name"
+        android:supportsRtl="true">
+        <activity android:name=".CircleActivity" />
+    </application>
+</manifest>
